--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,2 +1,2 @@
-provider: {linux_aarch64: default, linux_ppc64le: azure, win: azure}
+provider: {linux_aarch64: default, linux_ppc64le: default, win: azure}
 conda_forge_output_validation: true
